crates/swc_ecma_parser/tests/test262-error-references/fail/03d335d8e007f61e.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/03d335d8e007f61e.js:2:5
  |
2 |  is y
  |     ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/03d335d8e007f61e.js:2:2
  |
2 |  is y
  |  ^^

